# lucid_docs

./: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile.dev  README.md  compose.yaml  entrypoint.sh  pyproject.toml
src/lucid_docs/: dependencies.py  main.py
src/lucid_docs/core/: config.py  database.py  security.py
src/lucid_docs/models/: database.py  schemas.py
src/lucid_docs/routers/: authentication.py  query.py  upload.py
src/lucid_docs/services/: chroma_service.py  file_processing.py
src/lucid_docs/utils/: date.py  storage.py
tests/: conftest.py  test_auth.py  test_models_database.py  test_models_schemas.py  test_routes.py  test_upload.py
